--- a/conf/worker-normal.conf
+++ b/conf/worker-normal.conf
@@ -1,5 +1,7 @@
 worker {
     bind_socket = "0.0.0.0:11333";
+    type = "normal";
+    enabled = false;
     .include "$CONFDIR/worker-normal.inc"
     .include(try=true; priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/worker-normal.inc"
     .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/worker-normal.inc"
