fixed stats_path configuration

--- a/conf/worker-controller.conf
+++ b/conf/worker-controller.conf
@@ -5,7 +5,7 @@ worker {
     secure_ip = "127.0.0.1";
     secure_ip = "::1";
     static_dir = "/usr/share/rspamd/www";
-    stats_path = "/var/lib/rspamd";
+    stats_path = "/var/lib/rspamd/stats.ucl";
     .include(try=true; priority=1) "$LOCAL_CONFDIR/local.d/worker-controller.inc"
     .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/worker-controller.inc"
 }
