--- a/conf/worker-proxy.conf
+++ b/conf/worker-proxy.conf
@@ -1,5 +1,7 @@
 worker "rspamd_proxy" {
     bind_socket = "0.0.0.0:11332";
+    dynamic_conf = "$DBDIR/dynamic.ucl";
+    history_file = "$DBDIR/history.ucl";
     .include "$CONFDIR/worker-proxy.inc"
     .include(try=true; priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/worker-proxy.inc"
     .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/worker-proxy.inc"
